<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/etTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/stringDefaultAmount" />

    <Button
        android:id="@+id/btnPercent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPercent1"
        android:layout_centerHorizontal="true"
        android:onClick="calcTip"
        android:text="@string/stringBtn2" />

    <Button
        android:id="@+id/btnPercent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTotalAmount"
        android:layout_centerVertical="true"
        android:onClick="calcTip"
        android:text="@string/stringBtn1" />

    <Button
        android:id="@+id/btnPercent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etTotalAmount"
        android:layout_centerVertical="true"
        android:onClick="calcTip"
        android:text="@string/stringBtn3" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp"
        android:text="@string/tvDefault" />

</RelativeLayout>
